# xstore

./: .gitignore  CMakeCache.txt  CMakeLists.txt  bootstrap.py  build-config.toml  cs.toml  env.sh  run_client.sh  run_master.sh  run_server.sh  ycsb
ae_scripts/: ycsba.toml
benchs/arc/val/: net_config.hh
benchs/ycsb/: clients.hpp  controler.hpp  net_config.hpp
benchs/ycsb/server/: main.cc
scripts/: build.sh  debug_ycsb_client.sh  debug_ycsb_server.sh  run_ycsb_client.sh  run_ycsb_server.sh  ycsb_param.sh
src/: page_fetch.hpp
src/utils/: core_util.hpp  rtm_scope.hpp
